package com.cesar.school.fds2.raycharge.fornecedor.domain.estacaoderecarga;

public enum StatusEstacao {
  ATIVA,
  INATIVA
}
