@startuml

skinparam componentStyle uml2

package "'Fornecedor' Aggregate" <<Rectangle>> {
	class Fornecedor <<(A,#fffab8) Aggregate Root>> {
		String nomeFornecedor
		IdUsuario usuarioFornecedor
		IdFornecedor idFornecedor
		List<IdEstacao> estacoesDeRecarga
		List<IdAgendamento> historicoDeUso
	}
	class IdFornecedor <<(V,DarkSeaGreen) Value Object>> {
		int idFornecedor
	}
	class AlteracoesContaFornecedor <<(S,DarkSeaGreen) Service>> {
		int deletarConta(IdUsuario usuarioFornecedor)
		int alterarNomeFornecedor(String novoNome)
	}
}
package "'EstacaoDeRecarga' Aggregate" <<Rectangle>> {
	class EstacaoDeRecarga <<(E,DarkSeaGreen) Entity>> {
		String nomeDaEstacao
		int quantidadeDeCarregadores
		int precoMinimo
		int precoPKwH
		int distancia
		int tempoPorAgendamento
		IdEstacao idEstacao
		IdFornecedor idFornecedor
		HorarioDisponivel horarioFuncionamento
		Endereco enderecoEstacao
		StatusEstacao statusEstacao
		List<HorarioDisponivel> horariosDisponiveis
		List<IdAgendamento> historicoDeUso
	}
	class HorarioDisponivel <<(V,DarkSeaGreen) Value Object>> {
		DateTime inicioAgendamento
		DateTime fimAgendamento
	}
	class IdEstacao <<(V,DarkSeaGreen) Value Object>> {
		int idEstacao
	}
	class Endereco <<(V,DarkSeaGreen) Value Object>> {
		String cep
		String rua
		String bairro
		String cidade
		int numero
	}
	enum StatusEstacao {
		ATIVA
		INATIVA
	}
	class AlteracoesEstacao <<(S,DarkSeaGreen) Service>> {
		int adicionarEstacao(int quantidadeDeCarregadores, HorarioDisponivel horarioFuncionamento, Endereco enderecoEstacao, String nomeDaEstacao, IdEstacao idEstacao, int precoMinimo, int precoPKwH, int tempoPorAgendamento)
		int alterarQuantidadeCarregadores(int novaQuantidade)
		int alterarHorarioFuncionamento(HorarioDisponivel novoHorario)
		String alterarNomeEstacao(String novoNome)
		int alterarprecoMinimo(int novoPreco)
		int alterarPrecoPKwH(int novoPreco)
		int alterarTempoPorAgendamento(int novoTempo)
		int definirHorariosDisponiveis(int tempoPorAgendamento, HorarioDisponivel horarioFuncionamento)
		int deletarEstacao(EstacaoDeRecarga estacao)
	}
}
EstacaoDeRecarga "1" *--> "*" HorarioDisponivel : horariosDisponiveis
EstacaoDeRecarga --> IdFornecedor : idFornecedor
Fornecedor "1" o--> "*" IdEstacao : estacoesDeRecarga
EstacaoDeRecarga --> Endereco : enderecoEstacao
Fornecedor --> IdFornecedor : idFornecedor
EstacaoDeRecarga --> StatusEstacao : statusEstacao
EstacaoDeRecarga --> IdEstacao : idEstacao
EstacaoDeRecarga --> HorarioDisponivel : horarioFuncionamento
legend left
  This bounded context implements the subdomain 'CadastroEControleDeFornecedoresDomain'.
end legend


@enduml
